Fix some form components align

--- a/components/form/style/index.less
+++ b/components/form/style/index.less
@@ -121,7 +121,7 @@ input[type="checkbox"] {
   }
 
   .@{ant-prefix}-switch {
-    margin: 4px 0;
+    margin: 2px 0 4px;
   }
 
   &-no-colon &-label label:after {
